Further Gutenberg compatibility fixes. Also, made the content area, including paragraphs, narrower for easier reading. Restored title for the image post format to not have a permalink when not showing a featured image.

--- a/sass/layout/_jgd-material-grid.scss
+++ b/sass/layout/_jgd-material-grid.scss
@@ -71,6 +71,20 @@ article.page.three-fourths-centered {
 		width: 75%;
 	}
 	
+	@media (min-width: 80em) {
+		.three-fourths-centered .post,
+		.three-fourths-centered .page {
+			max-width: 80em;
+		}
+		
+		.three-fourths-centered .page-content,
+		.three-fourths-centered .entry-content,
+		.three-fourths-centered .entry-summary {
+			@include padding-two-values(1.5em, 0);
+			margin: 0 auto;
+		}
+	}
+	
 	/* Undo extra margins on outside of main element for galleries on single posts with Gallery post format */
 	.single-format-gallery main.jgd-grid-wrap {
 		margin-left: 0;
