--- a/sass/media/_featured-images.scss
+++ b/sass/media/_featured-images.scss
@@ -68,17 +68,10 @@ img.wp-post-image {
 	@include center-block;
 }
 
-@media screen and (min-width: 80em) {
+@media screen and (min-width: 52.5em) {
 	.featured-image,
 	.scrim {
 		width: calc(100% + 3em);
-	}
-	
-	.featured-image {
-		margin: -1.5em;	
-	}
-	
-	.scrim {
 		@include margin-four-values(-1.5em, -1.5em, 0, -1.5em);
 	}
 }
