--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -234,12 +234,6 @@ article.page,
 	display: inline;
 }
 
-.page-content,
-.entry-content,
-.entry-summary {
-	@include padding-two-values(1.5em, 0);
-}
-
 .page-links {
 	clear: both;
 	font-weight: $font__weight-bold;
@@ -265,7 +259,7 @@ article.page,
 
 /* Gutenberg compatibility */
 .alignwide {
-	@include margin-two-values(1em, 0);
+	margin: 1em;
 }
 
 .alignfull {
@@ -276,6 +270,28 @@ article.page,
 	.alignfull {
 		@include margin-two-values(1em, -1.5em);
 	}
+}
+
+/* Above 80em (~1280px), the content area's max-width is 46em (736px)
+ */
+@media (min-width: 80em) {
+	.entry-content > :not(.alignfull):not(.alignwide):not(.gallery):not(.tiled-gallery):not(.more-images-link) {
+		margin-left: auto;
+		margin-right: auto;
+		max-width: 75%;
+	}
+	
+	.alignwide {
+		margin: 1em 4em;
+	}
+	
+	.wp-block-cover-image.alignwide {
+		max-width: calc(100% - 8em);
+	}
+}
+
+.wp-block-cover-image {
+	/*width: 125%;*/
 }
 
 /* Attachment pages */
